ci: Improvements to repo Settings.yml and various GH Actions (#289)
* ci: Add Hotfix branch and increased required

* ci: Added more branch types to Approval GH Action

* ci: Cleaned up and refined Bit GH Action

* ci: Refined and cleaned up Test GH Action

* Update test.yml

* Update test.yml

* Update test.yml

* Update bit.yml

* Update .github/workflows/test.yml

Co-authored-by: Samuel SIlva <samuelsilvawb@gmail.com>

* Update approval.yml

* Update settings.yml

Co-authored-by: Samuel SIlva <samuelsilvawb@gmail.com>

--- a/.github/workflows/approval.yml
+++ b/.github/workflows/approval.yml
@@ -9,14 +9,20 @@ jobs:
   require_approval:
     name: Require Approval
     runs-on: ubuntu-latest
-    if: startsWith(github.event.pull_request.head.ref, 'feature/') || startsWith(github.event.pull_request.head.ref, 'ci/')
+    if: |
+      startsWith(github.event.pull_request.head.ref, 'feature/') || 
+      startsWith(github.event.pull_request.head.ref, 'fix/') || 
+      startsWith(github.event.pull_request.head.ref, 'improvement/') || 
+      startsWith(github.event.pull_request.head.ref, 'improvements/') || 
+      startsWith(github.event.pull_request.head.ref, 'bugfix/') || 
+      startsWith(github.event.pull_request.head.ref, 'hotfix/')
     steps:
       - id: token
         name: Authenticate
         uses: getsentry/action-github-app-token@v1
         with:
           app_id: ${{ secrets.CARLSBERG_SECURITY_APP_ID }}
-          private_key: "${{ secrets.CARLSBERG_SECURITY_APP_PRIVATE_KEY }}"
+          private_key: '${{ secrets.CARLSBERG_SECURITY_APP_PRIVATE_KEY }}'
 
       - id: check
         name: Check Reviewers
@@ -59,8 +65,8 @@ jobs:
               status: "completed",
               conclusion: conclusion,
               output: {
-                title: "Waiting designer approval",
-                summary: "Feature pull requests require an approval from a designer",
+                title: "Waiting for designer's approval",
+                summary: "This pull request requires an approval from a designer",
               },
             });
         env:
