--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -1,7 +1,7 @@
 repository:
   internal: true
-  has_issues: false
-  has_projects: false
+  has_issues: true
+  has_projects: true
   has_downloads: false
   default_branch: main
   allow_squash_merge: true
