chore: Disable no alert rule from stories

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,5 +2,13 @@
   "extends": ["@carlsberg/eslint-config-carlsberg"],
   "rules": {
     "import/no-extraneous-dependencies": "off"
-  }
+  },
+  "overrides": [
+    {
+      "files": ["*.stories.tsx"],
+      "rules": {
+        "no-alert": "off"
+      }
+    }
+  ]
 }
