fix: Remove button from workspace definition to see if pipeline works

--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -87,8 +87,7 @@
       "teambit.dependencies/dependency-resolver": {
         "policy": {
           "dependencies": {
-            "react-datepicker": "^4.7.0",
-            "@carlsberggroup/malty.atoms.button": "^0.0.58"
+            "react-datepicker": "^4.7.0"
           }
         }
       }
