--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,4 @@
 {
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.formatOnSave": true,
-  "workbench.colorCustomizations": {
-    "activityBar.background": "#093502",
-    "titleBar.activeBackground": "#0D4B02",
-    "titleBar.activeForeground": "#EFFEED"
-  }
+  "editor.formatOnSave": true
 }
