chore: added bit token

--- a/.github/workflows/bit.yml
+++ b/.github/workflows/bit.yml
@@ -8,6 +8,8 @@ jobs:
   deploy:
     name: 'Deploy Bit Packages'
     runs-on: ubuntu-latest
+     env:
+      BIT_TOKEN: ${{ secrets.BIT_TOKEN }}
     steps:
       - id: token
         name: Token
@@ -30,7 +32,10 @@ jobs:
           npx @teambit/bvm install
           export PATH=$HOME/bin:$PATH
           echo "PATH=$HOME/bin:$PATH" >> $GITHUB_ENV
+          bit config set user.token ${BIT_TOKEN}
         shell: bash
+        env:
+          BIT_TOKEN: ${{ secrets.BIT_TOKEN }}
 
       - name: Register remote scopes
         run: |
@@ -38,8 +43,11 @@ jobs:
           npm config set @bit:registry https://node.bit.dev
           npm config set @carlsberggroup:registry=https://node.bit.dev
           npm config set @teambit:registry=https://node.bit.dev
+          npm config set //node.bit.dev/:_authToken ${BIT_TOKEN}
           echo "Completed adding bit.dev to npm registry"
         shell: bash
+        env:
+          BIT_TOKEN: ${{ secrets.BIT_TOKEN }}
 
       - name: Bit Deps Install & Compile
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
