--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -1,7 +1,7 @@
 /**
  * this is the main configuration file of your bit workspace.
  * for full documentation, please see: https://bit.dev/docs/workspace/workspace-json
- **/{
+ **/ {
   "$schema": "https://static.bit.dev/teambit/schemas/schema.json",
   /**
    * main configuration of the Bit workspace.
@@ -50,9 +50,7 @@
       "@types/react-dom": "^17.0.2"
     },
     "packageManagerArgs": [],
-    "devFilePatterns": [
-      "**/*.spec.ts"
-    ],
+    "devFilePatterns": ["**/*.spec.ts"],
     "strictPeerDependencies": true
   },
   /**
@@ -66,10 +64,7 @@
      **/
     "*": {
       "teambit.component/dev-files": {
-        "devFilePatterns": [
-          "**/*.stories.+(js|ts|jsx|tsx)",
-          "**/*.story.+(js|ts|jsx|tsx)"
-        ]
+        "devFilePatterns": ["**/*.stories.+(js|ts|jsx|tsx)", "**/*.story.+(js|ts|jsx|tsx)"]
       },
       "teambit.react/react": {}
     },
@@ -96,7 +91,16 @@
       "teambit.dependencies/dependency-resolver": {
         "policy": {
           "dependencies": {
-            "@carlsberggroup/malty.atoms.icon-wrapper": "^0.0.29"
+            "@carlsberggroup/malty.atoms.icon-wrapper": "*"
+          }
+        }
+      }
+    },
+    "{icons/*}": {
+      "teambit.dependencies/dependency-resolver": {
+        "policy": {
+          "dependencies": {
+            "@carlsberggroup/malty.atoms.icon-wrapper": "*"
           }
         }
       }
