fix: added iconWrapper as dependency (#360)
* fix: added iconWrapper as dependency

* fix/added dependency to all icons

* chore: workspace file formated

--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -91,6 +91,24 @@
           }
         }
       }
+    },
+    "{atoms/icon}": {
+      "teambit.dependencies/dependency-resolver": {
+        "policy": {
+          "dependencies": {
+            "@carlsberggroup/malty.atoms.icon-wrapper": "*"
+          }
+        }
+      }
+    },
+    "{icons/*}": {
+      "teambit.dependencies/dependency-resolver": {
+        "policy": {
+          "dependencies": {
+            "@carlsberggroup/malty.atoms.icon-wrapper": "*"
+          }
+        }
+      }
     }
   }
 }
