--- a/.github/ISSUE_TEMPLATE/improvement.yml
+++ b/.github/ISSUE_TEMPLATE/improvement.yml
@@ -1,19 +1,18 @@
 name: Improvement
 description: Improvement requests can be submitted here
 title: 'improvement: '
-labels: [improvement, request]
-assignees: [galmeida12, MartimMatosCB]
+labels: [Improvement, Request]
+assignees: [galmeida12, marianacarlsberg, MartimMatosCB, vicenteopaso]
 body:
-  - type: input
+  - type: markdown
     attributes:
-      label: Summary
-    validations:
-      required: true
+      value: |
+        Please fill the title above with the appropriate summary of the issue
 
   - type: textarea
     attributes:
       label: Description
-      description: Please explain us what's the improvement that you would like to see
+      description: Please explain us what's the improvement that you would like to see. You can also attach files
     validations:
       required: true
 
@@ -42,13 +41,16 @@ body:
         - Progress Bar
         - Progress Spinner
         - Radio
+        - Rating
         - Stepper
         - Select
+        - Table
         - Text
         - Text Area
         - Tooltip
         - Toggle
         - Theme Provider
+        - Others
     validations:
       required: true
 
@@ -58,7 +60,7 @@ body:
       description: Tell us what's the priority that this improvement have to you
       options:
         - Blocker
-        - Highest
+        - Higher
         - High
         - Medium
         - Low
@@ -77,6 +79,6 @@ body:
         - Lean Signup
         - Ottilia
         - InnerSource Community
-        - OutSource Community
+        - OpenSource Community
     validations:
       required: true
