--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -1,19 +1,18 @@
 name: Bug
 description: Issue with a Component and/or Feature? Please tell us what are the problems that you are experiencing
 title: 'bug: '
-labels: [Bug]
-assignees: ['@CarlsbergGBS/malty-maintainers']
+labels: [Bug, Issue]
+assignees: [galmeida12, marianacarlsberg, MartimMatosCB, vicenteopaso]
 body:
-  - type: input
+  - type: markdown
     attributes:
-      label: Summary
-    validations:
-      required: true
+      value: |
+        Please fill the title above with the appropriate summary of the issue
 
   - type: textarea
     attributes:
       label: Description
-      description: Please explain us, in a succinct way, what's the problem that you're facing
+      description: Please explain us, in a succinct way, what's the problem that you're facing. You can also attach files
     validations:
       required: true
 
@@ -23,7 +22,7 @@ body:
       description: Tell us what's the priority that this bug have to you
       options:
         - Blocker
-        - Highest
+        - Higher
         - High
         - Medium
         - Low
@@ -42,7 +41,7 @@ body:
         - Lean Signup
         - Ottilia
         - InnerSource Community
-        - OutSource Community
+        - OpenSource Community
     validations:
       required: true
 
@@ -71,13 +70,16 @@ body:
         - Progress Bar
         - Progress Spinner
         - Radio
+        - Rating
         - Stepper
         - Select
+        - Table
         - Text
         - Text Area
         - Tooltip
         - Toggle
         - Theme Provider
+        - Others
     validations:
       required: true
 
