--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
   "dependencies": {
     "@popperjs/core": "^2.11.5",
     "@tanstack/react-table": "^8.5.13",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-table": "^7.7.12",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-popper": "^2.3.0"
