--- a/.github/workflows/bit.yml
+++ b/.github/workflows/bit.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   deploy:
     name: 'Deploy Bit Packages'
-    runs-on: public.ecr.aws/e5n7p9d7/bit:latest
+    runs-on: ubuntu-20.04
     env:
       BIT_TOKEN: ${{ secrets.BIT_TOKEN }}
     steps:
