--- a/.github/workflows/bit.yml
+++ b/.github/workflows/bit.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   deploy:
     name: 'Deploy Bit Packages'
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     env:
       BIT_TOKEN: ${{ secrets.BIT_TOKEN }}
     steps:
