--- a/.github/workflows/bit.yml
+++ b/.github/workflows/bit.yml
@@ -32,7 +32,9 @@ jobs:
 
       - name: Install latest Bit version
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        run: bvm install
+        run: |
+          export PATH=${{ env.PATH }}
+          bvm install
 
       - name: Add bvm bin folder to path
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
@@ -42,6 +44,7 @@ jobs:
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
           echo "Adding bit.dev to npm registry"
+          export PATH=${{ env.PATH }}
           npm config set @bit:registry https://node.bit.dev
           npm config set @carlsberggroup:registry=https://node.bit.dev
           npm config set @teambit:registry=https://node.bit.dev
@@ -53,6 +56,7 @@ jobs:
       - name: Bit Deps Install & Compile
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
+          export PATH=${{ env.PATH }}
           yarn cache clean --force
           bit clear-cache
           bit install
@@ -62,12 +66,15 @@ jobs:
       - name: Bit Tag Components
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
+          export PATH=${{ env.PATH }}
           bit tag --persist
         shell: bash
 
       - name: Export components
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        run: bit export
+        run: |
+          export PATH=${{ env.PATH }}
+          bit export
 
       - name: Configure Git
         run: |
