--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,9 @@ jobs:
       BIT_TOKEN: ${{ secrets.BIT_TOKEN }}
     steps:
       - uses: actions/checkout@v2
+        with:
+          token: ${{ steps.token.outputs.token }}
+
       - uses: actions/setup-node@v2-beta
         with:
           node-version: '16'
@@ -25,21 +28,17 @@ jobs:
           key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
 
       - name: Install Bit Version Manager
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: npm i -g @teambit/bvm
 
       - name: Install latest Bit version
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
           export PATH=${{ env.PATH }}
           bvm install
 
       - name: Add bvm bin folder to path
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: echo "$HOME/bin" >> $GITHUB_PATH
 
       - name: Set up bit config
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
           echo "Adding bit.dev to npm registry"
           export PATH=${{ env.PATH }}
