--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,11 +26,8 @@ jobs:
           key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
 
       - name: Install Bit Version Manager
-        run: npm i -g @teambit/bvm
-
-      - name: Install latest Bit version
         run: |
-          export PATH=${{ env.PATH }}
+          npm i -g @teambit/bvm
           bvm install
 
       - name: Add bvm bin folder to path
