--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,11 +28,12 @@ jobs:
       - name: Install Bit Version Manager
         run: |
           npm i -g @teambit/bvm
-          bvm install 0.0.867
+          bvm install latest
 
       - name: Add bvm bin folder to path
         run: |
           echo "$HOME/bin" >> $GITHUB_PATH
+          echo "PATH=$HOME/bin:$PATH" >> $GITHUB_ENV
 
       - name: Set up bit config
         run: |
