ci: update test.yml

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install Bit Version Manager
         run: |
           npm i -g @teambit/bvm
-          bvm install latest
+          bvm install 0.0.867
 
       - name: Add bvm bin folder to path
         run: |
